objects/Flag_Override_Cost_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>For flag override cost for Quote Line Item.</description>
    <fields>
        <fullName>Warn_Status_Threshold__c</fullName>
        <label>Warn Status Threshold</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Number_Of_Historical_Records__c</fullName>
        <label>Number Of Historical Records</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Historical_Records_Precedent_Pct_Require__c</fullName>
        <label>Historical Records Precedent % Required</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <label>Flag Override Cost Settings</label>
</CustomObject>